--- a/index.html
+++ b/index.html
@@ -75,21 +75,20 @@
 								</ul>
 							</article>
 
-						<!-- Posts 
+						<!-- Posts --->
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">May 14, 2023</span>
+										<h2><a href="https://github.com/JLankfer13/ONS-Census-UK-2021-Report-Ethnicity-Geo-Targeting">ONS Census UK 2021 Ethnicity Analysis & Geo-Targeting Strategy<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/JLankfer13/ONS-Census-UK-2021-Report-Ethnicity-Geo-Targeting" class="image fit"><img src="images/ONSmap2.png" alt="" /></a> 
+									<p>With the increasing awareness of D&I amongst Media Advertising and ensuring sensitivity alongside accuracy alongside in one-to-many forms of advertising, focus on finding detailed ethnicity groups is heightening. Harnessing the 2021 ONS Census report of ethnicities within the UK provide an opportunity for a justifiable scaled geo-strategy for targeting select groups. The analysis utilises Pandas, Re, GeoPandas, and Matplotlib to load and manipulate the report's data, produce % penetration scores for ethnicities within Local Authorities, and map these thematically via heat maps using geospatial references.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/JLankfer13/ONS-Census-UK-2021-Report-Ethnicity-Geo-Targeting" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<span class="date">April 22, 2017</span>
 										<h2><a href="#">Primis eget<br />
